# htracer

./: .gitignore  AABB.hs  Lights.hs  Makefile  Math.hs  Multisampler.hs  README.md  Scene.hs  Tracer.hs  htracer.cabal  htracer.hs
Surfaces/: Plane.hs  Sphere.hs
src/: AABB.hs  Math.hs  Multisampler.hs  Scene.hs  Tracer.hs  htracer.hs
src/Surfaces/: Plane.hs  Sphere.hs
